<resources>
    <string name="app_name">Searchat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>

    <!-- Toolbar / PagerAdapter -->
    <string name="all">ALL</string>
    <string name="owned">OWNED</string>
    <string name="joined">JOINED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Searchat</string>

    <!-- Strings related to login view-->
    <string name="prompt_username">Username</string>
    <string name="or_text">Or</string>
    <string name="sign_up_button">Sign UP</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="default_access">No_access</string>

    <string name="shared_preferences">Shared_preferences</string>
    <string name="saved_access_token">Saved_token</string>
    <string name="saved_username">Username</string>


    <!-- String related to the sign up view -->
    <string name="signup_name">Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <!-- Strings related to the sign up java-->
    <string name="signup_err_email">The Email must contain -@- and -.-</string>
    <string name="signup_err_cant_add_user">Ups, cant create a new user.</string>
    <string name="signup_err_username_already_created">Username already created</string>
    <!-- Strings profile user-->
    <string name="editProfile">Edit profile</string>
    <string name="signOut">Sign Out</string>

    <!-- String for profile information edit -->
    <string name="profile_information_name">Name</string>
    <string name="profile_information_last_name">Lastname</string>
    <string name="profile_information_about_you">About you</string>
    <string-array name="lenguages">
        <item>Spanish</item>
        <item>English</item>
        <item>Mandarin</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Japanese</item>
        <item>Italian</item>
        <item>German</item>
        <item>French</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="save_profile">Save</string>

    <!-- String for create new event-->

    <string name="new_event_name">Name</string>
    <string name="new_event_description">Description</string>
    <string name="new_event_date">Date</string>
    <string name="new_event_price">Price</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_event_ubication">Ubication</string>

    <!-- String for ShowEventActivity -->
    <string name="show_activity_name"></string>
    <string name="show_activity_location"></string>
    <string name="show_activity_administrator"></string>
    <string name="show_activity_description"></string>
    <string name="join_activity">Join Activity</string>

</resources>
